# foundry

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  langgraph_agent_web_search.py  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: validate.yml
benchmarks/: README.md  conftest.py  pyproject.toml  run.sh  test_skills.py
examples/baml-extraction/: README.md  pyproject.toml
examples/baml-extraction/baml_client/baml_client/: inlinedbaml.py  parser.py  type_builder.py  type_map.py
examples/baml-extraction/baml_src/: tests.baml
examples/browser-demo/: .env.example  browser_demo.py
examples/gateway-demo/: gateway_demo.py  pyproject.toml
examples/guardrails-demo/: pyproject.toml
examples/langgraph-web-search/: .env.example  README.md  pyproject.toml
examples/memory-demo/: .env.example  README.md  memory_demo.py
marketplace-browser/: index.html  wrangler.toml
marketplace-browser/public/data/: marketplace.json
marketplace-browser/src/: App.css  App.jsx  index.css
marketplace-browser/src/components/: PluginCard.jsx  PluginDetail.jsx
marketplace-browser/src/data/: marketplaceLoader.js
marketplace-browser/src/pages/: History.jsx  Inspector.jsx
plugins/adversarial-coach/: README.md
plugins/adversarial-coach/.claude-plugin/: plugin.json
plugins/adversarial-coach/agents/: coach.md
plugins/adversarial-coach/commands/: coach.md
plugins/adversarial-coach/skills/adversarial-coach/: SKILL.md
plugins/aws-agentcore-langgraph/: CHANGELOG.md  LICENSE  README.md
plugins/aws-agentcore-langgraph/.claude-plugin/: plugin.json
plugins/aws-agentcore-langgraph/examples/baml-extraction/: .env.example  demo.py
plugins/aws-agentcore-langgraph/examples/browser-demo/: README.md  pyproject.toml
plugins/aws-agentcore-langgraph/examples/code-interpreter-demo/: README.md  code_interpreter_demo.py  pyproject.toml
plugins/aws-agentcore-langgraph/examples/deep-research-agent/: .env.example  .gitignore  README.md  agent.py  pyproject.toml
plugins/aws-agentcore-langgraph/examples/gateway-demo/: .env.example  README.md  mock_gateway_demo.py
plugins/aws-agentcore-langgraph/examples/guardrails-demo/: .env.example  README.md  guardrails_demo.py
plugins/aws-agentcore-langgraph/examples/langgraph-web-search/: agent.py  pyproject.toml
plugins/aws-agentcore-langgraph/examples/memory-demo/: memory_demo.py  pyproject.toml
plugins/aws-agentcore-langgraph/examples/policy-demo/: .env.example  .gitignore  README.md  agent.py  cleanup_policy.py  pyproject.toml  setup_policy.py  test_policy.py
plugins/aws-agentcore-langgraph/examples/runtime-demo/: .env.example  .gitignore  README.md  agent.py  mock_lifecycle.sh  pyproject.toml
plugins/aws-agentcore-langgraph/skills/aws-agentcore-langgraph/: SKILL.md
plugins/aws-agentcore-langgraph/tapes/: 00-overview.tape  01-memory.tape  02-gateway.tape  03-browser.tape  04-code-interpreter.tape  05-guardrails.tape  06-policy.tape  07-runtime.tape  08-deep-research.tape  09-hero.tape  README.md  _settings.tape  live-gateway.tape  live-hero.tape  live-lifecycle.tape  live-memory.tape  live-overview.tape  mock-agentcore.sh  record-live.sh  render.sh
plugins/baml/: CHANGELOG.md  LICENSE.txt  README.md  metadata.yaml
plugins/baml/.claude-plugin/: plugin.json
plugins/baml/agents/: baml-architect.md  baml-debugger.md  baml-tester.md
plugins/baml/commands/: baml-diagnose.md  baml-init.md  baml-schema.md  baml-test.md
plugins/baml/references/: advanced_patterns.md  code_generator.md  philosophy.md  validation_patterns.md
plugins/baml/references/references/: advanced-patterns.md  frameworks-langgraph.md  languages-other.md  languages-python.md  languages-typescript.md  providers.md  types-and-schemas.md  (+1 more)
plugins/build-agent-skills/: CHANGELOG.md  LICENSE  README.md  SUBAGENTS-GUIDE.md  agents.json
plugins/build-agent-skills/.claude-plugin/: plugin.json
plugins/build-agent-skills/agents/: chain-of-density-summarizer.md  skill-reviewer.md
plugins/copywriter/: CHANGELOG.md  LICENSE  README.md
plugins/copywriter/.claude-plugin/: plugin.json
plugins/copywriter/agents/: cod-iteration.md
plugins/para-pkm/: README.md
plugins/para-pkm/.claude-plugin/: plugin.json
plugins/vhs-recorder/: CHANGELOG.md  LICENSE  README.md
plugins/vhs-recorder/.claude-plugin/: plugin.json
plugins/vhs-recorder/examples/: README.md  basic-demo.tape  cli-tool-demo.tape  git-workflow.tape  tutorial-with-errors.tape
recordings/: plugin-installation.tape
scripts/: README.md  pyproject.toml  validate.py  validate.sh
skills/aws-agentcore-langgraph/: SKILL.md
skills/aws-agentcore-langgraph/references/: gateway.md  langgraph-patterns.md  memory.md  runtime.md
(+35 files in other folders)
