[project]
name = "agent-skills-benchmark"
version = "0.1.0"
description = "Benchmark harness for testing Agent Skills plugins"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-json-report>=1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "slow: marks tests as slow (run with --run-slow)",
]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 88
